feat: add school combobox
